Scanner.cpp
/* Generated by re2c 0.13.5 on Sat May 24 17:37:11 2014 */
#line 1 "Scanner.re2c"
#include "Scanner.hpp"
#include "Token.hpp"

Token Scanner::next()
{
    char const* tokStart;

start:   
    tokStart = cursor;

    
#line 15 "Scanner.cpp"
{
	char yych;

	yych = *cursor;
	switch (yych) {
	case 0x00:	goto yy12;
	case '\t':
	case '\n':
	case '\f':
	case '\r':
	case ' ':	goto yy10;
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case ':':
	case '<':
	case '=':
	case '>':
	case '?':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '^':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy6;
	case '(':	goto yy2;
	case ')':	goto yy4;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	default:	goto yy14;
	}
yy2:
	++cursor;
#line 20 "Scanner.re2c"
	{ return Token(Token::OBR, tokStart, cursor); }
#line 116 "Scanner.cpp"
yy4:
	++cursor;
#line 21 "Scanner.re2c"
	{ return Token(Token::CBR, tokStart, cursor); }
#line 121 "Scanner.cpp"
yy6:
	++cursor;
	yych = *cursor;
	goto yy19;
yy7:
#line 22 "Scanner.re2c"
	{ return Token(Token::NAME, tokStart, cursor); }
#line 129 "Scanner.cpp"
yy8:
	++cursor;
	yych = *cursor;
	goto yy17;
yy9:
#line 23 "Scanner.re2c"
	{ return Token(Token::INT_LITERAL, tokStart, cursor); }
#line 137 "Scanner.cpp"
yy10:
	++cursor;
#line 24 "Scanner.re2c"
	{ goto start; }
#line 142 "Scanner.cpp"
yy12:
	++cursor;
#line 25 "Scanner.re2c"
	{ return Token(Token::END_OF_INPUT); }
#line 147 "Scanner.cpp"
yy14:
	++cursor;
#line 26 "Scanner.re2c"
	{ return Token(Token::INVALID, tokStart, cursor); }
#line 152 "Scanner.cpp"
yy16:
	++cursor;
	yych = *cursor;
yy17:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy16;
	default:	goto yy9;
	}
yy18:
	++cursor;
	yych = *cursor;
yy19:
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case '<':
	case '=':
	case '>':
	case '?':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '^':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy18;
	default:	goto yy7;
	}
}
#line 27 "Scanner.re2c"

}
